--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-
-/* Your CSS Code here. */
+div{
+    width: 200px;
+    background-color: purple;
+    border-left-color: green;
+/* 	border-left: 5px; */
+    border-left-width: 5px;
+    padding: 10px;
+    font-size: 20px;
+   
+}
+h3{
+    color: white;
+}
